src/base/TEMParser.java
// Generated from d:\Tests\dsl\grammers\TEMParser.g4 by ANTLR 4.9.3

    package base;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TEMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PAGE=1, EXTENDS=2, CONTROLLER=3, CONTROLS=4, IN=5, TEXT_FIELD=6, RADIO=7, 
		CHECKBOX=8, BUTTON=9, OUT=10, TEXT=11, IMAGE=12, INT_TYPE=13, BOOL_TYPE=14, 
		STRING_TYPE=15, IF=16, WHILE=17, ID=18, STRING=19, INTEGER=20, BOOLEAN=21, 
		WS=22, COMMENT=23, BRACE_OPEN=24, BRACE_CLOSE=25, PARANTH_OPEN=26, PARANTH_CLOSE=27, 
		COMA=28, SEMI_COLON=29, AT=30, COLON=31, ASSIGN=32, EQ=33, GT=34, LT=35, 
		GE=36, LE=37, OR=38, AND=39, PLUS=40, MINUS=41, MULTIPLY=42, DIVIDE=43;
	public static final int
		RULE_program = 0, RULE_page = 1, RULE_pageBody = 2, RULE_component = 3, 
		RULE_in = 4, RULE_inputField = 5, RULE_out = 6, RULE_outputField = 7, 
		RULE_controller = 8, RULE_controllerBody = 9, RULE_event = 10, RULE_block = 11, 
		RULE_ifBlock = 12, RULE_whileBlock = 13, RULE_statement = 14, RULE_declare = 15, 
		RULE_assign = 16, RULE_call = 17, RULE_type = 18, RULE_expression = 19, 
		RULE_expressionList = 20, RULE_value = 21, RULE_booleanOperator = 22, 
		RULE_mathmaticOperator = 23, RULE_comment = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "page", "pageBody", "component", "in", "inputField", "out", 
			"outputField", "controller", "controllerBody", "event", "block", "ifBlock", 
			"whileBlock", "statement", "declare", "assign", "call", "type", "expression", 
			"expressionList", "value", "booleanOperator", "mathmaticOperator", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'page'", "'extends'", "'controller'", "'controls'", "'in'", "'TextField'", 
			"'Radio'", "'Checkbox'", "'Button'", "'out'", "'Text'", "'Image'", "'int'", 
			"'bool'", "'string'", "'if'", "'while'", null, null, null, null, null, 
			null, "'{'", "'}'", "'('", "')'", "','", "';'", "'@'", "':'", "'='", 
			"'=='", "'>'", "'<'", "'>='", "'<='", "'or'", "'and'", "'+'", "'-'", 
			"'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PAGE", "EXTENDS", "CONTROLLER", "CONTROLS", "IN", "TEXT_FIELD", 
			"RADIO", "CHECKBOX", "BUTTON", "OUT", "TEXT", "IMAGE", "INT_TYPE", "BOOL_TYPE", 
			"STRING_TYPE", "IF", "WHILE", "ID", "STRING", "INTEGER", "BOOLEAN", "WS", 
			"COMMENT", "BRACE_OPEN", "BRACE_CLOSE", "PARANTH_OPEN", "PARANTH_CLOSE", 
			"COMA", "SEMI_COLON", "AT", "COLON", "ASSIGN", "EQ", "GT", "LT", "GE", 
			"LE", "OR", "AND", "PLUS", "MINUS", "MULTIPLY", "DIVIDE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TEMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TEMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public List<ControllerContext> controller() {
			return getRuleContexts(ControllerContext.class);
		}
		public ControllerContext controller(int i) {
			return getRuleContext(ControllerContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAGE) | (1L << CONTROLLER) | (1L << COMMENT))) != 0)) {
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PAGE:
					{
					setState(50);
					page();
					}
					break;
				case CONTROLLER:
					{
					setState(51);
					controller();
					}
					break;
				case COMMENT:
					{
					setState(52);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public Token pageId;
		public TerminalNode PAGE() { return getToken(TEMParser.PAGE, 0); }
		public PageBodyContext pageBody() {
			return getRuleContext(PageBodyContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TEMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TEMParser.ID, i);
		}
		public TerminalNode EXTENDS() { return getToken(TEMParser.EXTENDS, 0); }
		public List<TerminalNode> COMA() { return getTokens(TEMParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(TEMParser.COMA, i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(PAGE);
			setState(59);
			((PageContext)_localctx).pageId = match(ID);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(60);
				match(EXTENDS);
				setState(61);
				match(ID);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(62);
					match(COMA);
					setState(63);
					match(ID);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(71);
			pageBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageBodyContext extends ParserRuleContext {
		public TerminalNode BRACE_OPEN() { return getToken(TEMParser.BRACE_OPEN, 0); }
		public TerminalNode BRACE_CLOSE() { return getToken(TEMParser.BRACE_CLOSE, 0); }
		public List<ComponentContext> component() {
			return getRuleContexts(ComponentContext.class);
		}
		public ComponentContext component(int i) {
			return getRuleContext(ComponentContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public PageBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pageBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterPageBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitPageBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitPageBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageBodyContext pageBody() throws RecognitionException {
		PageBodyContext _localctx = new PageBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pageBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(BRACE_OPEN);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAGE) | (1L << IN) | (1L << OUT) | (1L << COMMENT))) != 0)) {
				{
				setState(76);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PAGE:
				case IN:
				case OUT:
					{
					setState(74);
					component();
					}
					break;
				case COMMENT:
					{
					setState(75);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComponentContext extends ParserRuleContext {
		public InContext in() {
			return getRuleContext(InContext.class,0);
		}
		public OutContext out() {
			return getRuleContext(OutContext.class,0);
		}
		public PageContext page() {
			return getRuleContext(PageContext.class,0);
		}
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_component);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IN:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				in();
				}
				break;
			case OUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				out();
				}
				break;
			case PAGE:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				page();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InContext extends ParserRuleContext {
		public Token fieldId;
		public Token eventId;
		public TerminalNode IN() { return getToken(TEMParser.IN, 0); }
		public TerminalNode COLON() { return getToken(TEMParser.COLON, 0); }
		public InputFieldContext inputField() {
			return getRuleContext(InputFieldContext.class,0);
		}
		public TerminalNode PARANTH_OPEN() { return getToken(TEMParser.PARANTH_OPEN, 0); }
		public TerminalNode PARANTH_CLOSE() { return getToken(TEMParser.PARANTH_CLOSE, 0); }
		public TerminalNode SEMI_COLON() { return getToken(TEMParser.SEMI_COLON, 0); }
		public List<TerminalNode> ID() { return getTokens(TEMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TEMParser.ID, i);
		}
		public TerminalNode AT() { return getToken(TEMParser.AT, 0); }
		public InContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitIn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitIn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InContext in() throws RecognitionException {
		InContext _localctx = new InContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_in);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(IN);
			setState(89);
			match(COLON);
			setState(90);
			inputField();
			setState(91);
			match(PARANTH_OPEN);
			setState(92);
			((InContext)_localctx).fieldId = match(ID);
			setState(93);
			match(PARANTH_CLOSE);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AT) {
				{
				setState(94);
				match(AT);
				setState(95);
				((InContext)_localctx).eventId = match(ID);
				}
			}

			setState(98);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputFieldContext extends ParserRuleContext {
		public TerminalNode TEXT_FIELD() { return getToken(TEMParser.TEXT_FIELD, 0); }
		public TerminalNode BUTTON() { return getToken(TEMParser.BUTTON, 0); }
		public TerminalNode CHECKBOX() { return getToken(TEMParser.CHECKBOX, 0); }
		public TerminalNode RADIO() { return getToken(TEMParser.RADIO, 0); }
		public InputFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterInputField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitInputField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitInputField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputFieldContext inputField() throws RecognitionException {
		InputFieldContext _localctx = new InputFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_inputField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TEXT_FIELD) | (1L << RADIO) | (1L << CHECKBOX) | (1L << BUTTON))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutContext extends ParserRuleContext {
		public Token fieldId;
		public Token source;
		public TerminalNode OUT() { return getToken(TEMParser.OUT, 0); }
		public TerminalNode COLON() { return getToken(TEMParser.COLON, 0); }
		public OutputFieldContext outputField() {
			return getRuleContext(OutputFieldContext.class,0);
		}
		public TerminalNode PARANTH_OPEN() { return getToken(TEMParser.PARANTH_OPEN, 0); }
		public TerminalNode PARANTH_CLOSE() { return getToken(TEMParser.PARANTH_CLOSE, 0); }
		public TerminalNode SEMI_COLON() { return getToken(TEMParser.SEMI_COLON, 0); }
		public List<TerminalNode> ID() { return getTokens(TEMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TEMParser.ID, i);
		}
		public TerminalNode LT() { return getToken(TEMParser.LT, 0); }
		public OutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_out; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterOut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitOut(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitOut(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutContext out() throws RecognitionException {
		OutContext _localctx = new OutContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_out);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(OUT);
			setState(103);
			match(COLON);
			setState(104);
			outputField();
			setState(105);
			match(PARANTH_OPEN);
			setState(106);
			((OutContext)_localctx).fieldId = match(ID);
			setState(107);
			match(PARANTH_CLOSE);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LT) {
				{
				setState(108);
				match(LT);
				setState(109);
				((OutContext)_localctx).source = match(ID);
				}
			}

			setState(112);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputFieldContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(TEMParser.TEXT, 0); }
		public TerminalNode IMAGE() { return getToken(TEMParser.IMAGE, 0); }
		public OutputFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterOutputField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitOutputField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitOutputField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputFieldContext outputField() throws RecognitionException {
		OutputFieldContext _localctx = new OutputFieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_outputField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_la = _input.LA(1);
			if ( !(_la==TEXT || _la==IMAGE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControllerContext extends ParserRuleContext {
		public Token controllerId;
		public Token pageId;
		public TerminalNode CONTROLLER() { return getToken(TEMParser.CONTROLLER, 0); }
		public TerminalNode CONTROLS() { return getToken(TEMParser.CONTROLS, 0); }
		public ControllerBodyContext controllerBody() {
			return getRuleContext(ControllerBodyContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TEMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TEMParser.ID, i);
		}
		public ControllerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controller; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterController(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitController(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitController(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControllerContext controller() throws RecognitionException {
		ControllerContext _localctx = new ControllerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_controller);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(CONTROLLER);
			setState(117);
			((ControllerContext)_localctx).controllerId = match(ID);
			setState(118);
			match(CONTROLS);
			setState(119);
			((ControllerContext)_localctx).pageId = match(ID);
			setState(120);
			controllerBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControllerBodyContext extends ParserRuleContext {
		public TerminalNode BRACE_OPEN() { return getToken(TEMParser.BRACE_OPEN, 0); }
		public TerminalNode BRACE_CLOSE() { return getToken(TEMParser.BRACE_CLOSE, 0); }
		public List<EventContext> event() {
			return getRuleContexts(EventContext.class);
		}
		public EventContext event(int i) {
			return getRuleContext(EventContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ControllerBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controllerBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterControllerBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitControllerBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitControllerBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControllerBodyContext controllerBody() throws RecognitionException {
		ControllerBodyContext _localctx = new ControllerBodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_controllerBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(BRACE_OPEN);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==AT) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AT:
					{
					setState(123);
					event();
					}
					break;
				case COMMENT:
					{
					setState(124);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public Token eventId;
		public Token componentId;
		public TerminalNode AT() { return getToken(TEMParser.AT, 0); }
		public TerminalNode PARANTH_OPEN() { return getToken(TEMParser.PARANTH_OPEN, 0); }
		public TerminalNode PARANTH_CLOSE() { return getToken(TEMParser.PARANTH_CLOSE, 0); }
		public TerminalNode BRACE_OPEN() { return getToken(TEMParser.BRACE_OPEN, 0); }
		public TerminalNode BRACE_CLOSE() { return getToken(TEMParser.BRACE_CLOSE, 0); }
		public List<TerminalNode> ID() { return getTokens(TEMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TEMParser.ID, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitEvent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitEvent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_event);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(AT);
			setState(133);
			((EventContext)_localctx).eventId = match(ID);
			setState(134);
			match(PARANTH_OPEN);
			setState(135);
			((EventContext)_localctx).componentId = match(ID);
			setState(136);
			match(PARANTH_CLOSE);
			setState(137);
			match(BRACE_OPEN);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << STRING_TYPE) | (1L << IF) | (1L << WHILE) | (1L << ID) | (1L << COMMENT))) != 0)) {
				{
				{
				setState(138);
				block();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(BRACE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TEMParserListener ) ((TEMParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TEMParserVisitor ) return ((TEMParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}
